--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.16",
@@ -34,6 +34,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.3",
     "prisma": "^6.4.1",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
